fixed spacing issues

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -182,10 +182,14 @@ h2 {
 }
 
 .rating {
-  color:rgb(0, 0, 0);
   font-size: 1.5rem;
   float: left;
   transform: translate(20%, -10%);
+}
+
+.rating-show {
+  font-size: 1.5rem;
+
 }
 
 .details {
